# good_coder

./: CMakeLists.txt  custom_type.h  input_file  main.cpp  parse_comm_type.h  parse_custom_type.h  parser.h
src/: custom_type.h  main.cpp  main.cpp_20180905  main.cpp_20180908  parse_comm_type.h  parse_custom_type.h  parser.h  test.cpp
test/: test_CustomType.cpp  test_ParseCommType.cpp  test_ParseCustomType.cpp  test_Parser.cpp
